<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:tools="http://schemas.android.com/tools"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:background="@color/black"
tools:context=".MainActivity"
android:orientation="vertical"
android:gravity="center_horizontal">

<ImageView
    android:id="@+id/logo"
    android:layout_width="wrap_content"
    android:layout_height="250dp"
    android:layout_marginTop="70dp"
    android:contentDescription="@string/yoga"
    android:src="@drawable/yoga" />


    <EditText
        android:id="@+id/newemail"
        android:layout_width="190dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="190dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/fname"
        android:inputType="text" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="190dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/lname"
        android:inputType="text" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="190dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/dob"
        android:inputType="date" />

    <EditText
        android:id="@+id/newpassword"
        android:layout_width="190dp"
        android:layout_height="29dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <Button
    android:id="@+id/signupbtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/signup"
    />
<TextView

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/logintxt"
    android:layout_marginTop="20dp"
    android:textColor="@color/white"/>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        android:text="@string/loginbtn"

        />


</LinearLayout>
</ScrollView>